Properly pass projet source/target level and paths to jshell and NB facilities