@@ -50,12 +50,20 @@ import java.io.InputStream;
 import java.io.PrintStream;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
 import javax.swing.text.Document;
 import jdk.jshell.JShell;
 import org.netbeans.api.java.classpath.ClassPath;
 import org.netbeans.api.java.platform.JavaPlatform;
+import org.netbeans.api.java.queries.SourceLevelQuery;
+import org.netbeans.api.java.queries.SourceLevelQuery.Result;
 import org.netbeans.api.java.source.ClasspathInfo;
+import org.netbeans.api.java.source.ClasspathInfo.PathKind;
+import org.netbeans.api.java.source.SourceUtils;
+import org.netbeans.api.project.FileOwnerQuery;
 import org.netbeans.api.project.Project;
 import org.netbeans.modules.jshell.model.ConsoleEvent;
 import org.netbeans.modules.jshell.model.ConsoleListener;
@@ -66,7 +74,9 @@ import org.netbeans.spi.java.classpath.ClassPathFactory;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
 import org.openide.cookies.EditorCookie;
 import org.openide.filesystems.FileObject;
+import org.openide.filesystems.URLMapper;
 import org.openide.loaders.DataObject;
+import org.openide.modules.SpecificationVersion;
 import org.openide.util.Exceptions;
 import org.openide.util.Lookup;
 import org.openide.util.Pair;
@@ -241,11 +251,42 @@ public class JShellEnvironment {
         return errStream;
     }
     
+    public SpecificationVersion getSourceLevel() {
+        Project p = getProject();
+        if (p == null) {
+            return getTargetLevel();
+        }
+        Result r = SourceLevelQuery.getSourceLevel2(p.getProjectDirectory());
+        String s = r.getSourceLevel();
+        if (s != null) {
+            return new SpecificationVersion(s);
+        } else {
+            return getTargetLevel();
+        }
+    }
+    
+    public SpecificationVersion getTargetLevel() {
+        return getPlatform().getSpecification().getVersion();
+    }
+    
+    /**
+     * @return modules which should be added to the compiler, or {@code null},
+     * if not modular
+     */
+    public List<String> getCompilerRequiredModules() {
+        return requiredModules;
+    }
+    
     public JShell.Builder customizeJShell(JShell.Builder b) {
+        if (requiredModules != null) {
+            b.compilerOptions("--add-modules", String.join(",", requiredModules)); // NOI18N
+        }
         return b;
     }
     
     private volatile boolean starting;
+    
+    private List<String>    requiredModules;
 
     public synchronized void start() throws IOException {
         assert workRoot != null;
@@ -269,20 +310,27 @@ public class JShellEnvironment {
             ClasspathInfo.Builder bld = new ClasspathInfo.Builder(
                     projectInfo.getClassPath(ClasspathInfo.PathKind.BOOT)
             );
-            ClassPath source = projectInfo.getClassPath(ClasspathInfo.PathKind.SOURCE);
+            ClassPath classesFromProject = ClassPathSupport.createClassPath(roots.toArray(new URL[roots.size()]));
+            ClassPath modBoot = projectInfo.getClassPath(ClasspathInfo.PathKind.MODULE_BOOT);
+            ClassPath modClassRaw = projectInfo.getClassPath(ClasspathInfo.PathKind.MODULE_CLASS);
+            ClassPath modCompile = projectInfo.getClassPath(ClasspathInfo.PathKind.MODULE_COMPILE);
+            
+            // TODO: Possible duplicate entries on CP + ModuleCP in case of modular project. May impact
+            // refactoring or usages.
             ClassPath compile = ClassPathSupport.createProxyClassPath(
-                        ClassPathSupport.createClassPath(roots.toArray(new URL[roots.size()])),
-                        userLibraryPath,
-                        projectInfo.getClassPath(ClasspathInfo.PathKind.COMPILE)
-                    );
+                classesFromProject,
+                userLibraryPath,
+                projectInfo.getClassPath(ClasspathInfo.PathKind.COMPILE)
+            );
+            ClassPath modClass = ClassPathSupport.createProxyClassPath(
+                classesFromProject,
+                userLibraryPath,
+                modClassRaw
+            );
             
             bld.setClassPath(compile)
                 //.setSourcePath(source)
                     ;
-            
-            ClassPath modBoot = projectInfo.getClassPath(ClasspathInfo.PathKind.MODULE_BOOT);
-            ClassPath modClass = projectInfo.getClassPath(ClasspathInfo.PathKind.MODULE_CLASS);
-            ClassPath modCompile = projectInfo.getClassPath(ClasspathInfo.PathKind.MODULE_COMPILE);
             
             bld.
                 setModuleBootPath(modBoot).
@@ -300,6 +348,11 @@ public class JShellEnvironment {
                     projectInfo.getClassPath(ClasspathInfo.PathKind.SOURCE)
             );
             */
+            if (ShellProjectUtils.isModularProject(project)) {
+                List<String> sortedModules = new ArrayList<>(ShellProjectUtils.findProjectImportedModules(project, null));
+                Collections.sort(sortedModules);
+                this.requiredModules = sortedModules;
+            }
         } else {
             cpi = ClasspathInfo.create(platformTemp.getBootstrapLibraries(),
                     platformTemp.getStandardLibraries(),
